# ym-ocr

./: .env.example  .gitignore  README.md  ocr.py  pyproject.toml
.cursor/: ponytail.mdc
app/: config.py  engine.py  main.py  mcpServer.py  ocrService.py  readingOrder.py  rest.py  schemas.py  softWrap.py  textNormalize.py
client/: ymOcrClient.py
deploy/: ym-ocr.service  ym-ocr.user.service
scripts/: install-service.sh  selfcheck.py  start.sh
skills/fastapi/: SKILL.md
tests/: test_pdf_text_extract.py  test_reading_order.py  test_soft_wrap.py  test_text_normalize.py
